add styles to main mobile window

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light ml-4 mr-1">
+    <nav class="navbar navbar-expand-lg navbar-light ml-3 mr-1">
       <div class="container-fluid flex">
 
         <button class="navbar-toggler flex-none border-none pl-0 pt-2 " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,33 +67,39 @@
       <div class="col-12">
         <img src="/images/image-product-1.jpg" alt="">
       </div>
-    <div class="container">
-      <div class="row">
-        <div class="title-secundary col-10 tx-orange font-bold text-xs py-3 ">SNEAKERS COMPANY</div>
-        <div class="title-primery col-10 tx-vark-blue text-2xl font-bold mb-2 ">Fall Limited Edition Sneakers</div>
-        <p class="col-10 tx-dark-blue text-xs lh-lg">These low-profile sneakers are your perfect casual wear companion. Featuring a 
+    <div class="pl-6 pr-1">
+        <div class="text-xs tx-orange font-bold  pt-3 pb-2  ">SNEAKERS COMPANY</div>
+        <div class="tx-vark-blue lh-sm text-3xl font-bold mb-2 ">Fall Limited Edition Sneakers</div>
+        <p class=" tx-dark-blue text-base ">These low-profile sneakers are your perfect casual wear companion. Featuring a 
           durable rubber outer sole, they'll withstand everything the weather can offer.</p>
-        <div class="col-10">$125.00</div>
-        <div class="col-10">50%</div>
-        <div class="col-10">$250.00</div>
-        <div class="col-10">0</div>
-        <div class="col-10">Add to cart</div>
-      </div>
-
-    </div>
+        <div class="container-sm my-4">
+          <div class="row gap-3">
+            <div class="col-3 pl-0 tx-vark-blue text-2xl font-bold ">$125.00</div>
+            <div class="col-2 font-bold text-sm tx-orange bgr-pale-orange rounded-sm px-0 w-9 self-center text-center">50%</div>
+            <div class="text-sm col-2 offset-4 font-bold text-slate-400/70 line-through self-center ">$250.00</div>
+          </div>
+        </div>
+        <div class="flex d-flex font-bold text-sm justify-content-between pl-5 pr-7 mb-4 ">
+          <span class="self-center ">
+            <img class="w-3/4" src="./../images/icon-minus.svg" alt=""></span>
+             0 
+          <span class="self-center ">
+            <img class="w-3/4" src="./../images/icon-plus.svg" alt=""></span></div>
+            
+          </div>
+          <div class="container mb-4">
+              <button type="button" class="col-10 btn btn-warning w-full py-2.5 bgr-orange text-white font-bold text-sm">
+                <div class="inline-block w-3 mr-2">
+                  <img src="./../images/icon-cart-white.svg" alt="">
+                </div>
+                Add to cart</button>
+          </div>
 </main> 
-  <script src="../bootstrap-5.2.0-dist/js/bootstrap.min.js"></script>
+ 
 </body>
 </html>
-<!-- Collections
-Men
-Women
-About
-Contact
 
-
-
- <div>
+ <!-- <div>
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
   Coded by <a href="#">Your Name Here</a>.
 </div> -->
