--- a/public/index.html
+++ b/public/index.html
@@ -74,10 +74,10 @@
     
    <!-- gallery zoom -->
   <div >
-      <div id="container-zoom-gallery" class=""> 
+      <div id="container-zoom-gallery"> 
         <!-- <zoom-gallery></zoom-gallery> -->
       </div> 
-      <svg id="icon-close" class="absolute not-visible z-20 top-7 right-close-icon "  width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path class=" hover:fill-orange-500" d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/></svg>
+      <svg id="icon-close" class="absolute not-visible z-20 top-7 right-close-icon "  width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path class=" hover:fill-orange-500" d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#ffff" fill-rule="evenodd"/></svg>
   </div> 
    <!--/gallery zoom -->
 
@@ -239,10 +239,14 @@
 
 </main> 
 
-
+<!-- jquery -->
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<!-- js modele -->
 <script type="module" src="./CustomElements/zoomGallery.js"></script>
+<!-- bootstrap -->
+<script src="./../bootstrap-5.2.0-dist/js/bootstrap.min.js"></script>
+<!-- main.js -->
 <script src="./script.js"></script>
- <script src="./../bootstrap-5.2.0-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
 
