--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,10 @@
 
 
 </main>  
-
+<div>
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="https://github.com/Josheperz/ecommerce-product-page-main">Jose Perez "Josheperz"</a>.
+</div> 
 <!-- jquery -->
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <!-- js module -->
@@ -284,7 +287,4 @@
 </body>
 </html>
 
- <!-- <div>
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Your Name Here</a>.
-</div> -->
+ 
